링크연결 및 썸네일 이미지 수정

--- a/taiyoung.html
+++ b/taiyoung.html
@@ -112,7 +112,11 @@
       </div>
     </header>
     <div class="spacing"></div>
-    <img src="img/8-1.jpg" alt="태영상선1">
+    <div class="gif">
+      <img src="img/8-1.jpg" alt="태영상선1">
+      <a href="https://parksoohee.github.io/taiyoung/" target="_blank" class="click click4"></a>
+    </div>
+    
     <img src="img/8-2.jpg" alt="태영상선2">
     <img src="img/8-3.jpg" alt="태영상선3">
     <img src="img/8-4.jpg" alt="태영상선4">
