--- a/rootree.html
+++ b/rootree.html
@@ -28,10 +28,10 @@
               <li>
                 <a href="#none">
                   <div>
-                    <img src="img/thumbnail8.jpg" alt="작업중">
+                    <img src="img/thumbnail8.jpg" alt="태영상선 사이트 리디자인">
                   </div>
                   <p class="thum_title">
-                    작업중
+                    태영상선 사이트 리디자인
                   </p>
                 </a>
               </li>
@@ -115,10 +115,7 @@
       </div>
     </header>
     <div class="spacing"></div>
-    <div class="gif">
-      <img src="img/3-1.jpg" alt="rootree1">
-      <a href="https://parksoohee.github.io/rootree/" target="_blank" class="click click3"></a>
-    </div>
+    <img src="img/3-1.jpg" alt="rootree1">
     <img src="img/3-2.jpg" alt="rootree2">
     <img src="img/3-3.jpg" alt="rootree3">
     <img src="img/3-4.jpg" alt="rootree4">
