--- a/contents.html
+++ b/contents.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>피스오브럭 APP Design</title>
+  <title>콘텐츠디자인 및 그 외 작업물</title>
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <!--프리텐다드-->
   <link rel="stylesheet" href="css/reset.css">
@@ -115,34 +115,22 @@
       </div>
     </header>
     <div class="spacing"></div>
-    <img src="img/1-1.jpg" alt="app1">
-    <img src="img/1-2.jpg" alt="app2">
-    <img src="img/1-3.jpg" alt="app3">
-    <img src="img/1-4.jpg" alt="app4">
-    <img src="img/1-5.jpg" alt="app5">
-    <img src="img/1-6.jpg" alt="app6">
-    <img src="img/1-7.jpg" alt="app7">
-    <img src="img/1-8.jpg" alt="app8">
-    <img src="img/1-9.jpg" alt="app9">
-    <img src="img/1-10.jpg" alt="app10">
-    <div class="gif">
-      <img src="img/1-11.jpg" alt="app11">
-      <img src="img/gif-1-1.gif" alt="splash" class="gif_">
-    </div>
-    <img src="img/1-12.jpg" alt="app12">
-    <img src="img/1-13.jpg" alt="app13">
-    <img src="img/1-14.jpg" alt="app14">
-    <img src="img/1-15.jpg" alt="app15">
-    <div class="gif1">
-      <img src="img/1-16.jpg" alt="app16">
-      <img src="img/gif-1-2.gif" alt="splash" class="gif_">
-      <img src="img/gif-errow.png" alt="errow" class="gif_e">
-    </div>
-    <img src="img/1-17.jpg" alt="app17">
-    <img src="img/1-18.jpg" alt="app18">
-    <img src="img/1-19.jpg" alt="app19">
-    <img src="img/1-20.jpg" alt="app20">
-    <img src="img/1-21.jpg" alt="app21">
+    <img src="img/7-1.jpg" alt="contents1">
+    <img src="img/7-2.jpg" alt="contents2">
+    <img src="img/7-3.jpg" alt="contents3">
+    <img src="img/7-4.jpg" alt="contents4">
+    <img src="img/7-5.jpg" alt="contents5">
+    <img src="img/7-6.jpg" alt="contents6">
+    <img src="img/7-7.jpg" alt="contents7">
+    <img src="img/7-8.jpg" alt="contents8">
+    <img src="img/7-9.jpg" alt="contents9">
+    <img src="img/7-10.jpg" alt="contents10">
+    <img src="img/7-11.jpg" alt="contents11">
+    <img src="img/7-12.jpg" alt="contents12">
+    <img src="img/7-13.jpg" alt="contents13">
+    <img src="img/7-14.jpg" alt="contents14">
+    <img src="img/7-15.jpg" alt="contents15">
+    <img src="img/7-16.jpg" alt="contents16">
     <a href="#wrap" class="top_btn">
       <img src="img/top.png" alt="top">
     </a>
