--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </a>
         </li>
         <li>
-          <a href="#none">
+          <a href="contents.html">
             <img src="img/thumbnail1.jpg" alt="콘텐츠 디자인 및 그 외 작업물">
           </a>
         </li>
