--- a/piece.html
+++ b/piece.html
@@ -28,10 +28,10 @@
               <li>
                 <a href="#none">
                   <div>
-                    <img src="img/thumbnail8.jpg" alt="작업중">
+                    <img src="img/thumbnail8.jpg" alt="태영상선 사이트 리디자인">
                   </div>
                   <p class="thum_title">
-                    작업중
+                    태영상선 사이트 리디자인
                   </p>
                 </a>
               </li>
