--- a/taiyoung.html
+++ b/taiyoung.html
@@ -43,6 +43,9 @@
                   <p class="thum_title">
                     피스오브럭 앱 디자인
                   </p>
+                  <!-- <p class="thum_text">
+                    피스오브럭 앱 디자인
+                  </p> -->
                 </a>
               </li>
               <li>
@@ -112,18 +115,14 @@
       </div>
     </header>
     <div class="spacing"></div>
-    <div class="gif">
-      <img src="img/8-1.jpg" alt="태영상선1">
-      <a href="https://parksoohee.github.io/taiyoung/" target="_blank" class="click click4"></a>
-    </div>
-    
+    <img src="img/8-1.jpg" alt="태영상선1">
     <img src="img/8-2.jpg" alt="태영상선2">
     <img src="img/8-3.jpg" alt="태영상선3">
     <img src="img/8-4.jpg" alt="태영상선4">
     <img src="img/8-5.jpg" alt="태영상선5">
     <img src="img/8-6.jpg" alt="태영상선6">
     <img src="img/8-7.jpg" alt="태영상선7">
-    <img src="img/8-8.jpg" alt="태영상선8">
+    <!-- <img src="img/8-8.jpg" alt="태영상선8"> -->
     <a href="#wrap" class="top_btn">
       <img src="img/top.png" alt="top">
     </a>
