--- a/taiyoung.html
+++ b/taiyoung.html
@@ -100,7 +100,7 @@
                 </a>
               </li>
               <li>
-                <a href="#none">
+                <a href="contents.html">
                   <div>
                     <img src="img/thumbnail1.jpg" alt="콘텐츠디자인 및 그 외 작업물">
                   </div>
