--- a/uiux.html
+++ b/uiux.html
@@ -26,7 +26,7 @@
           <div class="slide" id="slide">
             <ul>
               <li>
-                <a href="#none">
+                <a href="taiyoung.html">
                   <div>
                     <img src="img/thumbnail8.jpg" alt="태영상선 사이트 리디자인">
                   </div>
@@ -100,7 +100,7 @@
                 </a>
               </li>
               <li>
-                <a href="#none">
+                <a href="contents.html">
                   <div>
                     <img src="img/thumbnail1.jpg" alt="콘텐츠디자인 및 그 외 작업물">
                   </div>
