--- a/rootreedesign.html
+++ b/rootreedesign.html
@@ -59,7 +59,7 @@
                 </a>
               </li>
               <li>
-                <a href="tous.html">
+                <a href="rootree.html">
                   <div>
                     <img src="img/thumbnail5.jpg" alt="루트리 사이트 리디자인">
                   </div>
@@ -70,7 +70,7 @@
                 </a>
               </li>
               <li>
-                <a href="uiux.html">
+                <a href="tous.html">
                   <div>
                     <img src="img/thumbnail4.jpg" alt="뚜레쥬르 사이트 리디자인">
                   </div>
