--- a/rootree.html
+++ b/rootree.html
@@ -115,7 +115,11 @@
       </div>
     </header>
     <div class="spacing"></div>
-    <img src="img/3-1.jpg" alt="rootree1">
+    <div class="gif">
+      <img src="img/3-1.jpg" alt="rootree1">
+      <a href="https://parksoohee.github.io/rootree/" target="_blank" class="click click3"></a>
+    </div>
+    
     <img src="img/3-2.jpg" alt="rootree2">
     <img src="img/3-3.jpg" alt="rootree3">
     <img src="img/3-4.jpg" alt="rootree4">
