이미지 빠짐 수정

--- a/taiyoung.html
+++ b/taiyoung.html
@@ -126,7 +126,7 @@
     <img src="img/8-5.jpg" alt="태영상선5">
     <img src="img/8-6.jpg" alt="태영상선6">
     <img src="img/8-7.jpg" alt="태영상선7">
-    <!-- <img src="img/8-8.jpg" alt="태영상선8"> -->
+    <img src="img/8-8.jpg" alt="태영상선8">
     <a href="#wrap" class="top_btn">
       <img src="img/top.png" alt="top">
     </a>
