--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
       <p>
         물과 같은 사람이 되겠습니다. 어는점과 끓는점이 있는 것처럼 때로는 <br class="mo">어는점처럼 냉정하게 판단하고 피드백을 수용할 수 있고<br>
-        때로는 끓는점처럼 열정이 넘치는 모습에 저를 떠올릴 <br class="mo"> 물이 생각날 수 있도록 하겠습니다.
+        때로는 끓는점처럼 열정이 넘치는 모습에 저를 떠올릴 때 <br class="mo"> 물이 생각날 수 있도록 하겠습니다.
       </p>
     </section>
     <section id="project">
